<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/editDistance"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/distancia"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_de_quilometros"/>

    <EditText
            android:id="@+id/editPrice"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/preco"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/preco_por_litro"/>

    <EditText
            android:id="@+id/editAutonomy"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/autonomia"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kms_por_litro"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:text="@string/gasto_total"/>

    <TextView
            android:id="@+id/totalValue"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:textColor="@color/darkBlue"
            android:text="@string/valor_total"/>

    <Button
          android:id="@+id/buttonCalculate"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:backgroundTint="@color/lightGreen"
            android:textColor="@color/white"
            android:text="@string/calcular"/>

</LinearLayout>